--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: my-store-app
+service: my-first-app-alda
 
 frameworkVersion: "3"
 
@@ -6,6 +6,7 @@ provider:
   name: aws
   runtime: nodejs14.x
   region: eu-west-1
+  profile: default
   # setup profile for AWS CLI.
   # profile: node-aws
 
@@ -19,7 +20,7 @@ plugins:
 
 custom:
   client:
-    bucketName: my-store-app
+    bucketName: my-first-app-alda
     distributionFolder: dist
   s3BucketName: ${self:custom.client.bucketName}
 
